--- a/framework/composer.json
+++ b/framework/composer.json
@@ -21,7 +21,8 @@
         "nikic/fast-route": "^1.3",
         "league/container": "^4.2.0",
         "symfony/dotenv": "^6.3.0",
-        "twig/twig": "^3.7.0"
+        "twig/twig": "^3.7.0",
+        "doctrine/dbal": "^3.7.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0@dev",
